# pay-sdk-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yaml  rsa_private_key.der
examples/: create_user_client.rs  create_wallet.rs  get_wallet_addresses.rs  user_withdraw_by_open_id.rs  withdraw_server.rs
readme_language/readme_cn/: README.md  api-reference.md  appendix.md  authentication.md  examples.md
readme_language/readme_de/: README.md  api-reference.md  appendix.md  authentication.md  examples.md
readme_language/readme_en/: README.md  api-reference.md  appendix.md  authentication.md  examples.md
readme_language/readme_es/: README.md  api-reference.md  appendix.md  authentication.md  examples.md
readme_language/readme_ja/: README.md  api-reference.md  appendix.md  authentication.md  examples.md
readme_language/readme_ko/: README.md  api-reference.md  appendix.md  authentication.md  examples.md
readme_language/readme_ru/: README.md  api-reference.md  appendix.md  authentication.md  examples.md
readme_language/readme_tr/: README.md  api-reference.md  appendix.md  authentication.md  examples.md
readme_language/readme_tw/: README.md  api-reference.md  appendix.md  authentication.md  examples.md
src/: key_parser.rs  lib.rs  main.rs  request_define.rs  response_define.rs  rsa_utils.rs  sdk.rs
