[package]
edition = "2021"
name = "pay-sdk-rust"
version = "0.1.0"

[dependencies]
actix-web = "4" 
anyhow = "1.0" 
base64 = "0.22.1" 
chrono = "0.4" 
der = "0.7.10" 
digest = "0.10.7" 
rand = "0.8"
md-5 = { version = "0.10", features = ["oid"] }
rsa = { version = "0.9" }
pkcs8 = "0.10.2"  
serde = {version = "1.0", features = ["derive"]} 
serde_json = "1.0" 
serde_yaml = "0.9.34-deprecated" # 修复版本号
tokio = { version = "1.38", features = ["full"] }
reqwest = "0.12.23"
rand_core = "0.9.3"  